// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Manifestation Query all fields 1`] = `
{
  "data": {
    "manifestation": {
      "abstract": [
        "Dummy Some abstract ...",
      ],
      "access": [
        {
          "__typename": "AccessUrl",
          "origin": "infolink2003.elbo.dk",
          "url": "http://infolink2003.elbo.dk/DVT/dokumenter/doc/15271.pdf",
        },
        {
          "__typename": "DigitalArticleService",
          "issn": "09021620",
        },
      ],
      "accessTypes": [
        {
          "code": "PHYSICAL",
          "display": "Dummy fysisk",
        },
        {
          "code": "ONLINE",
          "display": "Dummy online",
        },
      ],
      "audience": {
        "ages": [
          {
            "begin": 10,
            "display": "Dummy 10-14",
            "end": 14,
          },
        ],
        "childrenOrAdults": [
          {
            "code": "FOR_CHILDREN",
            "display": "Dummy til børn",
          },
        ],
        "generalAudience": [
          "Dummy general audience",
        ],
        "let": "Dummy some let",
        "libraryRecommendation": "Dummy some library recommendation",
        "lix": "Dummy some lix",
        "primaryTarget": [
          "Dummy Some primary target",
        ],
        "schoolUse": [
          {
            "code": "FOR_SCHOOL_USE",
            "display": "Dummy til skolebrug",
          },
        ],
      },
      "catalogueCodes": {
        "nationalBibliography": [
          "national_bibliography",
        ],
        "otherCatalogues": [
          "other_catalogueCodes",
          "even_other_catalogueCodes",
        ],
      },
      "classifications": [
        {
          "code": "Dummy 86-096",
          "display": "Dummy 86-096, Skønlitteratur",
          "dk5Heading": "Dummy Skønlitteratur",
          "entryType": "NATIONAL_BIBLIOGRAPHY_ENTRY",
          "system": "Dummy DK5",
        },
        {
          "code": "Dummy 86-096 additional",
          "display": "Dummy 86-096, Skønlitteratur additional",
          "dk5Heading": "Dummy Skønlitteratur additional",
          "entryType": "NATIONAL_BIBLIOGRAPHY_ADDITIONAL_ENTRY",
          "system": "Dummy DK5 additional",
        },
      ],
      "contributors": [
        {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
      ],
      "contributorsFromDescription": [
        "Dummy på dansk ved Vivi Berendt",
      ],
      "cover": {
        "detail": "link-to-960px",
        "detail_117": "link-to-120px",
        "detail_207": "link-to-240px",
        "detail_42": "link-to-120px",
        "detail_500": "link-to-480px",
        "large": {
          "height": 800,
          "url": "link-to-960px",
          "width": 960,
        },
        "medium": {
          "url": "link-to-480px",
        },
        "small": {
          "url": "link-to-240px",
        },
        "thumbnail": "link-to-120px",
        "xSmall": {
          "url": "link-to-120px",
        },
      },
      "creators": [
        {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
        {
          "display": "Dummy Some Corporation",
          "nameSort": "Dummy Some Corporation for sorting",
        },
      ],
      "creatorsFromDescription": [
        "Dummy tekst af William Warren",
      ],
      "dateFirstEdition": {
        "display": "Dummy first edition",
        "endYear": 1950,
        "frequency": "1",
        "year": 1950,
      },
      "edition": {
        "contributors": [],
        "edition": "Dummy 3. i.e. 2 udgave",
        "publicationYear": {
          "display": "Dummy 2005",
          "endYear": null,
          "frequency": null,
          "year": 2005,
        },
        "summary": "Dummy 3. i.e. 2 udgave, 2005",
      },
      "genreAndForm": [
        "Dummy some genre",
      ],
      "hostPublication": {
        "creator": "Dummy Some Creator",
        "isbn": "Dummy some isbn",
        "issn": "Dummy 1395-7961",
        "issue": "Dummy some issue",
        "notes": [
          "Dummy a note",
        ],
        "pages": "Dummy 140-145",
        "publisher": "Dummy Some Publisher",
        "summary": "Dummy Årsskrift / Carlsbergfondet, 2006",
        "title": "Dummy Årsskrift / Carlsbergfondet",
        "year": {
          "display": "Dummy 2006",
        },
      },
      "identifiers": [
        {
          "type": "ISBN",
          "value": "Dummy 1234567891234",
        },
      ],
      "illAutomationMaterialGroup": {
        "id": 1,
        "name": "Dummy materialgroup",
      },
      "languages": {
        "abstract": [
          {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "main": [
          {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "notes": [
          "Dummy dansk",
          "dummy english",
          "dummy german",
        ],
        "original": [
          {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "parallel": [
          {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "spoken": [
          {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "subtitles": [
          {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
      },
      "latestPrinting": {
        "printing": "Dummy 11. oplag",
        "publicationYear": {
          "display": "Dummy 2020",
        },
        "summary": "Dummy 11. oplag, 2020",
      },
      "materialTypes": [
        {
          "materialTypeGeneral": {
            "code": "AUDIO_BOOKS",
            "display": "Dummy bøger",
          },
          "materialTypeSpecific": {
            "code": "AUDIO_BOOK",
            "display": "Dummy bog",
          },
        },
      ],
      "notes": [
        {
          "display": [
            "Dummy Indspillet i Ꜳrhus Musikhus 12.-14. juni 2020",
          ],
          "heading": null,
          "type": "NOT_SPECIFIED",
        },
      ],
      "ownerWork": {
        "workId": "work-of:870970-basis:26521556",
      },
      "physicalDescription": {
        "accompanyingMaterial": null,
        "materialUnits": [
          {
            "additionalDescription": null,
            "extent": "615 sider",
            "numberAndType": null,
            "size": null,
            "summary": "615 sider",
            "technicalInformation": null,
          },
        ],
        "numberOfPages": 615,
        "summaryFull": "615 sider",
      },
      "pid": "870970-basis:26521556",
      "publisher": [
        "Dummy Lægeforeningen",
      ],
      "relatedPublications": [
        {
          "heading": "Dummy Tidligere titel:",
          "isbn": null,
          "issn": "Dummy 0105-0508",
          "title": [
            "Dummy Yngre læger",
          ],
          "url": null,
          "urlText": null,
        },
        {
          "heading": "Dummy Udgave i andet medium: Også på cd-rom",
          "isbn": null,
          "issn": "Dummy 1399-4174",
          "title": [
            "Dummy Ugeskrift for læger",
          ],
          "url": null,
          "urlText": null,
        },
      ],
      "series": [
        {
          "numberInSeries": "Del 1",
          "title": "De syv søstre-serien",
        },
      ],
      "shelfmark": {
        "postfix": "Dummy some postfix",
        "shelfmark": "Dummy some shelfmark",
      },
      "source": [
        "Dummy some source",
      ],
      "subjects": {
        "all": [
          {
            "display": "Dummy Some fictional subject",
          },
          {
            "display": "Dummy 1950-1980",
          },
          {
            "display": "Dummy Jens Jensen",
          },
          {
            "display": "Dummy Some Corporation",
          },
        ],
        "dbcVerified": [
          {
            "display": "Dummy Some fictional subject",
            "language": {
              "display": "Dummy dansk",
              "isoCode": "dum dan",
            },
          },
          {
            "display": "Dummy 1950-1980",
          },
          {
            "display": "Dummy Jens Jensen",
          },
          {
            "display": "Dummy Some Corporation",
          },
        ],
      },
      "titles": {
        "alternative": [
          "Dummy Some Title: Alternative",
        ],
        "full": [
          "Dummy Some Title: Full",
        ],
        "identifyingAddition": "Dummy Indlæst af Jens Jensen",
        "main": [
          "Dummy Some Title",
        ],
        "original": [
          "Dummy Some Title: Original",
        ],
        "parallel": [
          "Dummy Parallel Title 1",
          "Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": [
          "Dummy En Oversat Titel",
        ],
      },
      "volume": "Dummy Bind 2",
    },
  },
}
`;

exports[`Manifestation fetch by faust 1`] = `
{
  "data": {
    "manifestation": {
      "pid": "870970-basis:26521556",
    },
  },
}
`;

exports[`Manifestation fetch by pid 1`] = `
{
  "data": {
    "manifestation": {
      "pid": "870970-basis:26521556",
    },
  },
}
`;

exports[`Manifestation fetch multi by faust 1`] = `
{
  "data": {
    "manifestations": [
      {
        "pid": "870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Manifestation fetch multi by pid 1`] = `
{
  "data": {
    "manifestations": [
      {
        "pid": "870970-basis:26521556",
      },
    ],
  },
}
`;
